2009-10-30 Dong H. Ahn <ahn1@llnl.gov>
	* tools/ciod/debugger_interface.h: updated this with ciod debug
	  interface version 4.
	* test/src/be_jobsnap.cxx: added BGP port 
	* launchmon/src/linux/sdbg_linux_ttracer.hxx: patch to work around 
	  a bug in NPTL thread debug library's td_thr_get_info call.

2009-08-26 Dong H. Ahn <ahn1@lnll.gov>
	* launchmon/src/lmon_api/*.h,
	config/x_ac_prefix_config_h.m4: Added lmon-config.h support
	(prefixed config macros) to all header files that are
	 externally exported.


2009-08-15 Dong H. Ahn <ahn1@llnl.gov>
	* Yet another cut to enhance error handlings; better
	P/T state tracking system is used to handle idiosyncrasy 
	of Linux process control


2009-06-03 Dong H. Ahn <ahn1@llnl.gov>
	* Better enforcement of the error handling semantics. 
	* Added test.attach_4_kill for BlueGene.
	* Made ptrace errors in tracer_detach "a soft error" 
	  instead of a hard error that throws an exception.


2009-06-01 Dong H. Ahn <ahn1@llnl.gov>
	* Added a minor bug fix to detect the master thread ID correctly.
	  (A bug introduced by one of changes made on 2009-05-20)
	* Upped the grace period by x10 bewteen two consecutive signals
	  to overcome unreliable UNIX signals. For some platforms,
	  it turned out that sending SIGSTOPs to all the threads (lwp)
	  of the target process did not cause all of them to stop
	  with a short grace period...


2009-05-20 Dong H. Ahn <ahn1@llnl.gov>
	* Added LMON_fe_regErrorCB support (ID2787962)
	* Added a fix for the "re-attach" defect on BlueGene/P. 
	  The fix requires the IBM efix27 or higher.
	* Added a fix for the back-end and front-end [recv|send]UsrData functions
	  to return correct error codes. Added a new error code 
	  (LMON_ENEGCB) to lmon_api_std.h to deal with a
	  negative code returning from user-provided 
	  pack/unpack callback routines. (ID2787959) 
	* Changed the library version to -version-info 1:0:1.
	  It is because this revision added new API calls and 